      cppunit-standalone.diff
  * debian/tests/control.in:
    - make uno superficial, it only runs the bridgetest
  * debian/tests/*:
    - only create config_host.mk when not existing (e.g. architectures having
      no tests with build-needed and thus there is no build which created it)
    - don't try to run test-extension/odk-build-examples* as root, skip them
      if doing so
  * debian/control.in.
    - bump ure depends to >= 1:7.3.0~ (closes: #998746)
  * debian/tests/cppunit-*: fix syntax

 -- Rene Engelhard <rene@debian.org>  Sat, 30 Oct 2021 10:19:40 +0200

libreoffice (1:7.3.0~alpha1-3) experimental; urgency=medium

  * debian/patches/cppunit-optional.diff: build more stuff in smoketest
    not related to cppunit itself (e.g. TestExtension.{jar,oxt})

  * debian/rules:
    - build smoketestdoc.sxw again

 -- Rene Engelhard <rene@debian.org>  Sun, 31 Oct 2021 19:10:08 +0100

libreoffice (1:7.3.0~alpha1-2) experimental; urgency=medium

  * debian/rules:
    - use --without-cppunit in build-indep
    - use clang 12 on ppc64el (if building with LTO at least)
    - fix autopkgtest builds; explicitely set PACKAGE_SDK_DOCS=n

 -- Rene Engelhard <rene@debian.org>  Sun, 31 Oct 2021 09:25:30 +0100

libreoffice (1:7.3.0~alpha1-1) experimental; urgency=medium

  * New upstream alpha release
    - fixes --enable-lto build with clang (filters out -flto=X)
      (closes: #985867)
 
  * debian/patches/filter-out-lto-flags.diff: remove, was incomplete since
    the revert in 1:7.2.1-1 anyway

  * debian/rules:
    - use --with-idlc-cpp=cpp to use cpp instead of ucpp and
      adapt IDLC_CPP_DEPENDS for -dev accordingly 
    - build with LTO if we build with mergelibs
    - only test the apparmor profiles' syntax on build-indep builds
      (since that is where they are installed); move (dh-)apparmor build-deps
      to Build-Depends-Indep
  * debian/tests/* debian/rules::
    - run the cppunit tests (as superficial tests) and add