@@ -76,29 +76,29 @@ Test-Command: for i in /etc/apparmor.d/usr.lib.libreoffice.program.*; do /sbin/a
 Depends: libreoffice-common, apparmor
 Restrictions: allow-stderr, superficial
 
-# Is there a need for this small test given we run the UI tests etc.?
-Tests: smoketest
-Architecture: %OOO_NOGUI_ARCHS%
-Depends: @builddeps@, libreoffice-dev, libreoffice-core, libreoffice-writer, libreoffice-calc, libreoffice-impress, libreoffice-math, libreoffice-base, libreoffice-sdbc-hsqldb, libreoffice-sdbc-firebird
-Restrictions: allow-stderr, build-needed, rw-build-tree, superficial
-
 # Those tests even work when there is no /usr/lib/libreoffice there in any way. @builddeps@ is enough.
 # That strictly violates the autopkgtest stuff thus mark them as superficial. But if a library
 # or whatever update broke it we should know
 Tests: cppunit-subsequentcheck
 Architecture: %OOO_CHECK_FATAL_ARCHS%
-Depends: @builddeps@, @
+Depends: @builddeps@, %AUTOPKGTEST_CPPUNIT_PACKAGES%
 Restrictions: build-needed, rw-build-tree, allow-stderr, superficial
 
 Tests: cppunit-slowcheck
 Architecture: %OOO_CHECK_FATAL_ARCHS%
-Depends: @builddeps@, @
+Depends: @builddeps@, %AUTOPKGTEST_CPPUNIT_PACKAGES%
 Restrictions: build-needed, rw-build-tree, allow-stderr, superficial
 
 Tests: cppunit-unitcheck
 Architecture: %OOO_CHECK_FATAL_ARCHS%
-Depends: @builddeps@, @
+Depends: @builddeps@, %AUTOPKGTEST_CPPUNIT_PACKAGES%
 Restrictions: build-needed, rw-build-tree, allow-stderr, superficial
+
+# Is there a need for this small test given we run the UI tests etc.?
+Tests: smoketest
+Architecture: %OOO_CHECK_FATAL_ARCHS%
+Depends: @builddeps@, libreoffice-dev, libreoffice-core, libreoffice-writer, libreoffice-calc, libreoffice-impress, libreoffice-math, libreoffice-base, libreoffice-sdbc-hsqldb, libreoffice-sdbc-firebird
+Restrictions: allow-stderr, build-needed, rw-build-tree, superficial
 
 # This one tests real connection to a MySQL and works by symlinking that one
 # specific library to the one in libreoffice-sdbc-mysql
