@@ -23,6 +23,13 @@ libreoffice (1:7.3.0~alpha1-4) UNRELEASED; urgency=medium
       no tests with build-needed and thus there is no build which created it)
     - don't try to run test-extension/odk-build-examples* as root, skip them
       if doing so
+  * debian/tests/control.in:
+    - move smoketest after the cppunit tests and run it only on the
+      architectures those, too (also make it build-needed)
+  * debian/tests/control.in, debian/rules:
+    - don't use @ as dependency in cppunit-* since -nogui conflict with the
+      "real" ones; populate by dh_listpackages but filter -nogui, -dev-doc and
+      the l10ns/helps out
   * debian/control.in.
     - bump ure depends to >= 1:7.3.0~ (closes: #998746)
   * debian/tests/cppunit-*: fix syntax
